force-app/main/default/objects/AusPostSettings__c/AusPostSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>These are the settings required in order to use AusPost web services. The values for different settings are used by various components in the solution.</description>
    <label>AusPost Settings</label>
</CustomObject>