force-app/main/default/objects/AusPostSettings__c/fields/ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>ApplicationName__c</fullName>
    <inlineHelpText>Please populate a value for AddressValidation setting</inlineHelpText>
    <label>ApplicationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>