force-app/main/default/objects/AusPostSettings__c/fields/LockDuration__c.field-meta.xml
<CustomField>
    <fullName>LockDuration__c</fullName>
    <description>The number of seconds the lock can be active</description>
    <label>Lock Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>