force-app/main/default/objects/AusPostSettings__c/fields/Number1__c.field-meta.xml
<CustomField>
    <fullName>Number1__c</fullName>
    <label>Number1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>