force-app/main/default/objects/AusPostSettings__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <inlineHelpText>Please populate a value for AddressValidation setting</inlineHelpText>
    <label>ServiceName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>