force-app/main/default/objects/AusPostSettings__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Testing if token expiry is equal to 1 day</description>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>