force-app/main/default/objects/AusPostSettings__c/fields/TokenDuration__c.field-meta.xml
<CustomField>
    <fullName>TokenDuration__c</fullName>
    <inlineHelpText>Please populate a value for AddressValidation setting</inlineHelpText>
    <label>TokenDuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>