force-app/main/default/objects/AusPostSettings__c/fields/URL2__c.field-meta.xml
<CustomField>
    <fullName>URL2__c</fullName>
    <description>Additional URL if required</description>
    <label>URL2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>