force-app/main/default/objects/AusPostSettings__c/fields/URL3__c.field-meta.xml
<CustomField>
    <fullName>URL3__c</fullName>
    <label>URL3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>